# Automatic_Generation_of_Product_Concepts

./: dependencies.yaml  git_commands  requirements.txt  setup.cfg  setup.py
experiments/: experiments-clustering.py  experiments-single-target-with-noise.py  processing-clustering.ipynb  run_command.txt
experiments/.ipynb_checkpoints/: experiments-clustering-checkpoint.py  experiments-single-target-with-noise-checkpoint.py  processing-clustering-checkpoint.ipynb  processing-query-checkpoint.ipynb
experiments/clustering/: overview_clustering.txt
src/: core.py  exps.py  io.py
src/.ipynb_checkpoints/: Representations-checkpoint.py  core-checkpoint.py  exps-checkpoint.py
