[metadata]
name = mcd
version = 0.0.1
description = musical-context-disovery for Tunify
author = Kshitij Goyal
author-email = kgoyal40@gmail.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown
url = https://github.com/kgoyal40
platforms = any
classifiers = 
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir = 
    = src
install_requires = 
    # Necessary packages for our own python-package to work. Typically a subset of those mentioned in dependencies.yaml
    numpy
    pandas
    scikit-learn
    scipy
python_requires = 
    >= 3.7

[options.packages.find]
where = 
    src
exclude = 
    tests

[aliases]
dists = bdist_wheel

[devpi:upload]
no-vcs = 1
formats = bdist_wheel
